# my-claude

./: .gitignore  .markdownlint.json  CLAUDE.md  README.md  Taskfile.yml  ansible.cfg  pyproject.toml
.claude/skills/my-claude-sync-upstream/: SKILL.md
.github/workflows/: test-deployment.yml
claude/: settings.yml.j2
claude-assets/: CLAUDE.md  claude.yml.j2  settings.yml.j2
claude-assets/agents/: CLAUDE.md
claude-assets/agents/mc/: get-current-datetime.md
claude-assets/commands/: CLAUDE.md
claude-assets/commands/mc/: git-commit.md  git-squash-commits.md  git-sync-branch.md
claude-assets/output-styles/: CLAUDE.md  engineer-professional.md  laowang-engineer.md  marionette-engineer.md  nekomata-engineer.md  ojousama-engineer.md  tangtang-bot-engineer.md
claude-assets/skills/ms-git-commit/: SKILL.md
claude-assets/skills/ms-git-squash-commits/: SKILL.md
claude-assets/skills/ms-git-sync-branch/: SKILL.md
codex-assets/: AGENTS.md  config.toml.j2  env.j2
docs/: claude-settings-reference.md
inventory/: CLAUDE.md
inventory/default/group_vars/all/: codex_config.yml  codex_mcp_servers.yml  mcp_servers.yml  models.yml  secrets.yml.example  settings.yml
playbooks/: CLAUDE.md  install_claude.yml  install_plugins.yml  render_claude_settings.yml  setup.yml  sync_claude_config.yml
playbooks/tasks/: check_cli.yml  install_cli.yml  install_plugins_tasks.yml  manage_mcp_servers.yml  manage_single_mcp_server.yml  sync_claude_json_tasks.yml  sync_codex_config_tasks.yml  sync_config_tasks.yml  verify_deployment.yml
