
[project]
name = "my-claude-ansible"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ansible>=11.5.0",
    "check-jsonschema>=0.30.0",
]

# Python 换源
[tool.uv]
index-url = "https://mirrors.aliyun.com/pypi/simple"
package = true

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["filter_plugins/*"]